# pia_server

./: .env.example  .gitignore  README.md  hit_mcp.py  pyproject.toml  setup.md
pia_server/: config.py  main.py
pia_server/api/: app.py
pia_server/api/routes/: spark.py  system.py
pia_server/collectors/: base.py  mock.py  real.py
pia_server/db/: database.py  queries.py  schema.py
pia_server/graphql/: schema.py  types.py
pia_server/mcp_server/: server.py
pia_server/models/: spark.py  system.py
tests/: conftest.py  test_collectors.py  test_db.py  test_graphql.py  test_mcp.py  test_rest.py
